refractor: makefile complies now with guidlines

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -11,8 +11,8 @@ SRCDIR = src
 OBJDIR = obj
 LIBDIR =
 RLINEDIR = /usr/include/readline
-SRC := $(shell find $(SRCDIR) -name '*.cpp')
-# SRC := src/megaphone.cpp
+# SRC := $(shell find $(SRCDIR) -name '*.cpp')
+SRC := src/Weapon.cpp src/HumanB.cpp src/HumanA.cpp src/main.cpp
 OBJ = $(SRC:$(SRCDIR)/%$(EXT)=$(OBJDIR)/%.o)
 
 # $(info VAR="$(SRC)")
